apps/argocd/base/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    monitoring: prometheus
    prometheus: main
    goldilocks.fairwinds.com/enabled: "true"
