apps/argocd/base/core/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.k8s.localhost
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.k8s.localhost
    secretName: tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-grpc.k8s.localhost
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - secretName: tls-secret
    hosts:
    - argocd-grpc.k8s.localhost
# SOURCE: https://github.com/motoki317/manifest/blob/acea7744b5fd3e9fe69bda2d626e255aad1b15f9/argocd/ingress-route.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: argocd-server

# spec:
#   entryPoints:
#     - websecure
#   tls:
#     secretName: argocd-server-tls
#   routes:
#     - kind: Rule
#       match: Host(`cd.toki317.dev`) && PathPrefix(`/api/webhook`)
#       services:
#         - kind: Service
#           namespace: argocd
#           name: argocd-server
#           port: 80
#           scheme: http
#           strategy: RoundRobin
#           weight: 1
#     - kind: Rule
#       match: Host(`cd.toki317.dev`)
#       middlewares:
#         - name: auth-toki317-dev-admin
#           namespace: auth
#       services:
#         - kind: Service
#           namespace: argocd
#           name: argocd-server
#           port: 80
#           scheme: http
#           strategy: RoundRobin
#           weight: 1
