apps/argocd/base/core/allow-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: argocd
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
